# c-game-tutorial

./: .gitignore  CMakeLists.txt  README.md
include/: circular_queue.h  constants.h  damage.h  env_item.h  linked_damage_list.h  map_castle.h  player.h  slime.h  texture.h  weapon.h
src/: circular_queue.c  damage.c  env_item.c  linked_damage_list.c  player.c  slime.c  texture.c  weapon.c
src/map/: map_castle.c
test/: main.c
tutorial/: animate.c  change_screen.c  ex_01.c  keyboaud_input.c
